lab 4 opi