@@ -9,6 +9,35 @@
   <url>http://maven.apache.org</url>
   <dependencies>
 
+
+    <dependency>
+      <groupId>io.prometheus.jmx</groupId>
+      <artifactId>collector</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.prometheus.jmx</groupId>-->
+<!--      <artifactId>jmx_prometheus_javaagent</artifactId>-->
+<!--      <version>1.0.1</version>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient</artifactId>
+      <version>0.15.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_httpserver</artifactId>
+      <version>0.15.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_hotspot</artifactId>
+      <version>0.15.0</version>
+    </dependency>
+
+
     <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
@@ -46,5 +75,30 @@
   </dependencies>
   <build>
     <finalName>JPA_WEB</finalName>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>9</source>
+                  <target>9</target>
+              </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.0</version>
+            <configuration>
+              <archive>
+                <manifest>
+                  <addClasspath>true</addClasspath>
+                </manifest>
+                <manifestEntries>
+                  <Java-Options>-XX:+UseConcMarkSweepGC</Java-Options>
+                </manifestEntries>
+              </archive>
+            </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
